# todo-app

./: index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/TaskManager/: TaskManager.css  TaskManager.tsx
src/components/TodoList/: TodoList.css  TodoList.tsx
src/pages/: About.tsx  Home.tsx  Login.tsx  Register.tsx
src/services/: firebasedb.tsx
src/styles/: App.css
src/types/: types.tsx
