[package]
name = "todoapp"
version = "0.0.2"
description = "Todo App"
authors = ["fiseyy", "awfulfacekid"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies.mongodb]
version = "2.5.0"
features = ["tokio-sync"]

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
